fix: horizontal alignment of action buttons in builder project table (#14216)

--- a/airbyte-webapp/src/components/ConnectorBuilderProjectTable/ConnectorBuilderProjectTable.module.scss
+++ b/airbyte-webapp/src/components/ConnectorBuilderProjectTable/ConnectorBuilderProjectTable.module.scss
@@ -72,6 +72,10 @@
   }
 }
 
+.actions {
+  width: 100%;
+}
+
 .cell {
   // hardcode height to keep cells aligned with first line of 'name' column
   height: 38px;
